<resources>
    <string name="app_name">Farm Management Pro</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="SearchHere">    Search Here…</string>

    <string name="home">Home</string>
    <string name="profile">User</string>
    <string name="setting">Settings</string>
    <string name="purchased_date">Purchased Date</string>
    <string name="name">Name</string>
    <string name="quantity">Quantity</string>
    <string name="prescribed_by">Prescribed By</string>
    <string name="supplier">Supplier</string>
    <string name="reset">Reset</string>
    <string name="save">Save</string>
    <string name="update_medicine_details">Update Medicine Details</string>
    <string name="description">Description</string>
    <string name="update_feed">Update Feed</string>


</resources>